--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,8 @@
 spring:
   application:
     name: ppixel-demo
-  datasource:
-    url: jdbc:postgresql://localhost:5432/ppixel_db
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-    hikari:
-      connection-test-query: SELECT 1
-  jpa:
-    show-sql: true
+
+  # data source is not set. Please refer dev profile for local usage
   liquibase:
     enabled: true
-    change-log: db-changelog.xml
+    change-log: classpath:changelog.xml
