--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -12,5 +12,16 @@ spring:
       connection-test-query: SELECT 1
   jpa:
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   liquibase:
     contexts: default,dev # first create schema from default profile, then run dev
+
+  logging:
+    level:
+      org.springframework.security: DEBUG
+
+      org.hibernate.SQL: DEBUG
+      org.hibernate.type.descriptor.sql: TRACE
+      org.hibernate.persister.entity: DEBUG
