Fix user search logic and improve auth
- deeply redesign search for users to have effective pagination
- implement simple create phone rest call with check for token content

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -20,7 +20,9 @@ spring:
 
   logging:
     level:
-      org.springframework.security: DEBUG
+      org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+      org.springframework.security: TRACE
 
       org.hibernate.SQL: DEBUG
       org.hibernate.type.descriptor.sql: TRACE
