refactoring and performance improvements
- user UserReference instead of fully blown UserEntity when necessary
- use strict typification for search queries
- use exception with status codes
- update and simplify combination of Valid and NotNull
- switch of jpa from view
- implement phone related operations

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: ppixel-demo
+  jpa:
+    open-in-view: false
 
   # data source is not set. Please refer dev profile for local usage
   liquibase:
