--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -17,6 +17,9 @@ spring:
         format_sql: true
   liquibase:
     contexts: default,dev # first create schema from default profile, then run dev
+    parameters:
+      liquibase.quotedIdentifiers: true # god-damned table namer user !!!
+    driver-class-name: org.postgresql.Driver
 
   logging:
     level:
