--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,12 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=ppixel_db
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 1s
+      timeout: 5s
+      retries: 20
+      start_period: 5s
     networks:
       - internal
 
