Provide containerized server runtime, update README.md

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/ppixel_db?reWriteBatchedInserts=true
+    url: jdbc:postgresql://localhost:5432/ppixel_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
