--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,21 @@
 services:
+
+  server:
+    container_name: server
+    build: .
+    ports:
+      - "127.0.0.1:8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=default,dev,docker
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: "no"
+    networks:
+      internal:
+
   postgres:
+    container_name: postgres
     image: postgres:16
     ports:
       - "127.0.0.1:5432:5432"
